--- a/CSS/Portfolio.css
+++ b/CSS/Portfolio.css
@@ -27,6 +27,17 @@
     margin-bottom: -10px;
 }
 
+.certificationslink{
+    text-decoration: none!important;
+    font-weight: bold;
+    color:black;
+    transition: all 0.2s;
+    font-size: 1.1rem;
+}
+
+.certificationslink:hover{
+    color:blue;
+}
 
 @media screen and (max-width:600px){
     .nav-item{
