--- a/CSS/Portfolio.css
+++ b/CSS/Portfolio.css
@@ -19,6 +19,9 @@
 }
 
 
+
+
+
 .navItemActive{
     font-size: 1.2em;
     font-weight: bold;
@@ -32,6 +35,7 @@
     font-weight: bold;
     transition: all 0.2s;
     font-size: 1.1rem;
+    margin-left: 3vw;
 }
 
 .certificationslink:hover{
@@ -101,7 +105,7 @@ hr{
 
 @media screen and (max-width:600px){
     #div2{
-        height: 120vh;
+        height: 140vh;
     }
 }
 
@@ -114,7 +118,12 @@ hr{
 
 @media screen and (max-width:600px){
     #div3{
-        height: 150vh;
+        height: 160vh;
+    }
+
+    .certificationslink{
+        text-align: center;
+        width: 100%;
     }
 }
 
@@ -141,7 +150,7 @@ hr{
     }
 
     #div4{
-        height: 190vh;
+        height: 210vh;
     }
 }
 
