--- a/CSS/Portfolio.css
+++ b/CSS/Portfolio.css
@@ -26,7 +26,7 @@
     font-size: 1.2em;
     font-weight: bold;
     color:black;
-    border-bottom: 3px solid #4d5bff;  
+    border-bottom: 3px solid blue;  
     margin-bottom: -10px;
 }
 
@@ -39,7 +39,7 @@
 }
 
 .certificationslink:hover{
-    color:#4d5bff!important;
+    color:blue!important;
 }
 
 @media screen and (max-width:600px){
@@ -50,7 +50,7 @@
     }
 
     .nav-item:hover{
-        color:#4d5bff;
+        color:blue;
         font-weight: bold;
         border-bottom: none;  
         font-size: 1.3em;
