--- a/CSS/Portfolio.css
+++ b/CSS/Portfolio.css
@@ -26,7 +26,7 @@
     font-size: 1.2em;
     font-weight: bold;
     color:black;
-    border-bottom: 3px solid blue;  
+    border-bottom: 3px solid #017CFF;  
     margin-bottom: -10px;
 }
 
@@ -39,7 +39,7 @@
 }
 
 .certificationslink:hover{
-    color:blue!important;
+    color:#017CFF!important;
 }
 
 @media screen and (max-width:600px){
@@ -50,7 +50,7 @@
     }
 
     .nav-item:hover{
-        color:blue;
+        color:#017CFF;
         font-weight: bold;
         border-bottom: none;  
         font-size: 1.3em;
@@ -64,23 +64,20 @@
 #div1{
     height: 100vh;
     overflow: hidden;
-    background-image: linear-gradient(white,rgb(214, 214, 214));    
+      
     margin-top:6%
 }
 
 .responsive {
-    width: 135%;
-    height: 110%;
-    margin-top: -19.5%;
-    margin-left: -10%;
-    
+    width: 120%;
+    height: 100%;
+    margin-top: -10%;
 }
 
 
 #div1s{
     height: 95vh;
     margin-top:18%;
-    background-image: linear-gradient(white,rgb(214, 214, 214));    
 }
 
 
@@ -89,7 +86,7 @@
 #div2{
     height: 100vh;
     overflow: hidden;
-    padding-left:7.8%;
+    padding-left:7%;
     padding-right:2%;
     padding-top:7%;
     padding-bottom:5%
