--- a/CSS/Portfolio.css
+++ b/CSS/Portfolio.css
@@ -19,6 +19,14 @@
 }
 
 
+.navbar-toggler:focus,
+.navbar-toggler:active,
+.navbar-toggler-icon:focus {
+    outline: none;
+    box-shadow: none;
+}
+
+
 
 
 
