--- a/CSS/Portfolio.css
+++ b/CSS/Portfolio.css
@@ -13,9 +13,10 @@
 
 
 .nav-item{
-    font-size: 1.1em;
     transition: all 0.2s;
     cursor: pointer;
+    font-size: 1.2rem;
+    margin-left: 60px;
 }
 
 
@@ -26,10 +27,6 @@
     box-shadow: none;
 }
 
-
-
-
-
 .navItemActive{
     font-size: 1.2em;
     font-weight: bold;
@@ -38,17 +35,7 @@
     margin-bottom: -10px;
 }
 
-.certificationslink{
-    text-decoration: none!important;
-    font-weight: bold;
-    transition: all 0.2s;
-    font-size: 1.1rem;
-    margin-left: 3vw;
-}
 
-.certificationslink:hover{
-    color:#017CFF!important;
-}
 
 @media screen and (max-width:600px){
     .nav-item{
@@ -68,20 +55,34 @@
 
 
 /* DIVISON 1 CSS  */
-
 #div1{
     height: 100vh;
     overflow: hidden;
-      
-    margin-top:6%
+    padding-top: 10vh;
+}
+
+.main-div {
+    display: flex;
+    align-items: start;
+    justify-content: center;
+    flex-flow: column;
 }
 
 .responsive {
-    width: 120%;
+    width: 100%;
     height: 100%;
-    margin-top: -8%;
 }
 
+.socialLinksRow {
+    display: flex;
+    justify-content: space-between;
+}
+
+.socialLinksRow a {
+    height: 40px;
+    width: 40px;
+    margin-right: 20px;
+}
 
 #div1s{
     height: 95vh;
@@ -132,6 +133,18 @@ hr{
     }
 }
 
+.certificationslink{
+    text-decoration: none!important;
+    font-weight: bold;
+    transition: all 0.2s;
+    font-size: 1.1rem;
+    margin-left: 3vw;
+}
+
+.certificationslink:hover{
+    color:#017CFF!important;
+}
+
 
 /* DIV4 CSS */
 
@@ -142,16 +155,19 @@ hr{
 .prjCard{
     border-radius:10px;
     box-shadow: 0px 0px 10px rgb(184, 184, 184);
+    height: auto;
 }
 
 .cardCont{
     padding: 15px;
 }
 
+
 @media screen and (max-width:600px){
 
     .prjCard{
         margin-top:10%;
+        height: 90vh;
     }
 
     #div4{
