--- a/CSS/Portfolio.css
+++ b/CSS/Portfolio.css
@@ -13,7 +13,6 @@
 
 
 .nav-item{
-    transition: all 0.2s;
     cursor: pointer;
     font-size: 1vw;
     margin-left: 3vw;
@@ -32,12 +31,13 @@
     box-shadow: none;
 }
 
+.nav-item:hover{
+    color:#017CFF;
+}
+
 .navItemActive{
-    font-size: 1.2em;
     font-weight: bold;
-    color:black;
-    border-bottom: 3px solid #017CFF;  
-    margin-bottom: -10px;
+    color:#017CFF;
 }
 
 
@@ -62,11 +62,12 @@
     }
 
     .nav-item:hover{
-        color:#017CFF;
+        color:black;
+    }
+
+    .navItemActive{
         font-weight: bold;
-        border-bottom: none;  
-        font-size: 1.3em;
-        margin-bottom: 0px;
+        color:black;
     }
 
     .navbar{
