--- a/CSS/Portfolio.css
+++ b/CSS/Portfolio.css
@@ -40,6 +40,20 @@
     color:#017CFF;
 }
 
+.section-heading{
+    background: white;
+    border-radius: 5px;
+    box-shadow: 9.91px 9.91px 15px #D9DADE, -8px -8px 8px #FFFFFF;
+    width: 200px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 2vh;
+    margin-bottom: 5vh;
+    font-weight: bold;
+    font-size: 1vw;
+}
 
 
 @media screen and (max-width:600px){
@@ -72,6 +86,14 @@
 
     .navbar{
         border-bottom: 1px solid gainsboro;
+    }
+
+    .section-heading{
+        font-weight: bold;
+        font-size: 5vw;
+        padding-bottom: 2vh;
+        text-align: center;
+
     }
 }
 
@@ -140,14 +162,12 @@ hr{
 /* DIV3 CSS */
 
 #div3{
-    height: 150vh;
-    margin-top: 50px;
+    height: auto;
+    padding-top: 8vh;
+    padding-bottom: 8vh;
 }
 
 @media screen and (max-width:600px){
-    #div3{
-        height: 160vh;
-    }
 
     .certificationslink{
         text-align: center;
@@ -171,7 +191,12 @@ hr{
 /* DIV4 CSS */
 
 #div4{
-    height: 80vh;
+    height: 100vh;
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    padding-top: 0px;
+    padding-bottom: 0px;
 }
 
 .prjCard{
@@ -192,7 +217,9 @@ hr{
     }
 
     #div4{
-        height: 210vh;
+       height: auto;
+       padding-top: 20px;
+       padding-bottom: 50px;
     }
 }
 
